fix underline alignment on the header links

--- a/style.less
+++ b/style.less
@@ -123,6 +123,7 @@ body {
 
 	a {
 		text-decoration:none;
+		display: block;
 	}
 
 	hgroup,
